made some changes

--- a/index.html
+++ b/index.html
@@ -43,28 +43,15 @@
             </li>
             <li class="nav-item">
               <a class="nav-link " aria-current="page" href="#contact">Contact us</a>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Services
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">SEO</a></li>
-                <li><a class="dropdown-item" href="#">Web Design</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Graphic Design</a></li>
-              </ul>
             </li>
-          </ul>
 
         </div>
       </div>
-    </nav>
+    </nav>git 
   </header>
-  <!-- -----------------------nav---------------------------------- -->
-  <div id="carouselExampleCaptions" class="carousel slide">
+  <!-- -----------------------Home---------------------------------- -->
+  <div id="home">
+  <div id="carouselExampleCaptions" class="carousel slide" >
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
         aria-current="true" aria-label="Slide 1"></button>
@@ -105,9 +92,10 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+</div>
 
   <!-- ___________________________about__________________________________ -->
-  <section class="about my-5 ">
+  <section class="about my-5 " id="about">
     <div class="container ">
       <h1 class="text-center my-5 Head " data-aos="fade-up" data-aos-offset="200">About <span
           class=" text-primary">us</span>
@@ -185,7 +173,7 @@
     </div>
   </section>
   <!-- ---------------------------Services-------------------------------------------- -->
-  <section class="services py-5 bg-light">
+  <section class="services py-5 bg-light" id="services">
     <div class="container">
       <div class="text-center my-5">
         <h1 class="Head" data-aos="fade-up" data-aos-offset="200">Our <span class="text-primary">Services</span>
@@ -258,7 +246,7 @@
     </div>
   </section>
   <!-- -------------------------team-------------------- -->
-  <section class="team my-5 text-center">
+  <section class="team my-5 text-center" id="team">
     <div class="container">
       <div class="text-center my-5">
         <h1 class="Head" data-aos="fade-up" data-aos-offset="200">Our <span class="text-primary">Team</span>
@@ -300,7 +288,7 @@
 
   </section>
   <!-- ----------------------contact------------------------------ -->
-  <section class="contact py-5">
+  <section class="contact py-5" id="contact">
     <div class="container">
       <div class="text-center my-5">
         <h1 class="Head" data-aos="fade-up" data-aos-offset="200">Feel Free <span class="text-primary"> To
